Always offer off hand abilities to new players